--- a/src/main/resources/templates/news.html
+++ b/src/main/resources/templates/news.html
@@ -6,7 +6,7 @@
 <div class="container">
     <div class="horizontal-center" style="margin-right: unset">
         <tr th:each="news1 : ${news}">
-            <div class="card-container">
+            <div class="card-container" th:id="${'news' + news1.id}">
                 <div class="card rounded">
                     <div th:if="${news1.image}">
                         <img th:src=" ${news1.image} ? *{'data:image/jpeg;base64,'+news1.image} : ''"
@@ -33,8 +33,8 @@
 
                             <button th:id="${news1.id}" class="btn chat" type="button"
                                     data-bs-toggle="collapse"
-                                    th:attr="data-bs-target=${'#collapseExample' + news1.id}"
-                                    aria-expanded="false" aria-controls="collapseExample">
+                                    th:attr="data-bs-target=${'#collapseChat' + news1.id}"
+                                    aria-expanded="false" aria-controls="collapseChat">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="17" height="17"
                                      fill="currentColor" class="bi bi-chat-left" viewBox="0 0 16 16">
                                     <path d="M14 1a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H4.414A2 2 0 0 0 3 11.586l-2 2V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12.793a.5.5 0 0 0 .854.353l2.853-2.853A1 1 0 0 1 4.414 12H14a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
@@ -52,13 +52,26 @@
                                 </svg>
                             </a>
                         </div>
-                        <div class="editor-info">
-                            <p class="text-center" th:text="${news1.newsDate + ' ' + news1.newsTime}"></p>
-                            <p class="text-center" th:text="${'Editor: ' + news1.editor}"></p>
+                        <div class="editor-info row m-0">
+                            <div class="col">
+
+                            </div>
+                            <div class="col">
+                                <p class="text-center" th:text="${news1.newsDate + ' ' + news1.newsTime}"></p>
+                                <p class="text-center" th:text="${'Editor: ' + news1.editor}"></p>
+                            </div>
+                            <div class="col" style="transform: translateY(30%);">
+                                <button class="delete-news-btn btn btn-danger" style="float: right">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
+                                        <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"/>
+                                        <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"/>
+                                    </svg>
+                                </button>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="collapse" th:id="${'collapseExample'+ news1.id}">
+                <div class="collapse" th:id="${'collapseChat'+ news1.id}">
                     <div class="card card-footer">
                         <ul class="list-group" th:id="${'message-list' + news1.id}"></ul>
                         <br/>
@@ -106,7 +119,7 @@
                         <button type="button" class="btn" style="background: #5ce1e6" id="addNewsBtn"
                                 data-bs-toggle="modal"
                                 data-bs-target="#addNews"
-                                aria-expanded="false" aria-controls="collapseExample">
+                                aria-expanded="false" aria-controls="collapseAddNews">
                             <svg xmlns="http://www.w3.org/2000/svg" width="70" height="16" fill="currentColor"
                                  class="bi bi-plus"
                                  viewBox="0 0 16 16">
