--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,7 +7,7 @@
         <a href="/" class="navbar-brand">
             <img src="/images/logo.png" height="60" alt="NbaNews">
         </a>
-        <div>
+        <div sec:authorize="isAnonymous()">
             <a class="btn btn-primary mr-1" data-bs-toggle="collapse" href="#collapseExample" role="button"
                aria-expanded="false"
                aria-controls="collapseExample">
@@ -41,7 +41,7 @@
                     </svg>
                 </button>
             </form>
-            <button class="btn btn-primary mr-1" id="return-back-btn" sec:authorize="isAuthenticated()" onclick="window.history.back()">
+            <button class="btn btn-primary mr-1" id="return-back-btn" sec:authorize="isAuthenticated()">
                 Return back
             </button>
         </div>
