some tests and refactoring

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -19,7 +19,7 @@
             <a class="btn btn-primary mr-1" role="button" onclick="signIn('admin@gmail.com','gSKkf@%rM^@(Mqhx')">
                 Login as Admin
             </a>
-            <a class="btn btn-primary mr-1" role="button" onclick="signIn('user@yandex.com', 'NLFyP(uMrwq5A^jc')">
+            <a class="btn btn-primary mr-1" role="button" onclick="signIn('user@yandex.ru', 'NLFyP(uMrwq5A^jc')">
                 Login as User
             </a>
             <a class="btn btn-primary mr-1" role="button" onclick="signIn('editor@yahoo.com', '^VVQu#6XRxeQjV8C')">
@@ -82,9 +82,19 @@
             </div>
         </div>
         <div class="row" style="justify-content: center; align-content: center">
-            <h3>
-                Здесь будет описание пет-проекта и использованные технологии
-            </h3>
+            <h5>
+                Стек технологий: <br>
+                Spring Security, Spring Data JPA, Spring Security Test, Hibernate ORM, Hibernate Validator, SLF4J,
+                Thymeleaf,
+                Apache Tomcat, PostgreSQL, JUnit 5, AssertJ, jQuery, jQuery plugins, Bootstrap.
+                <br><br>
+                <a href="https://github.com/N1decker/nbanews">Проект</a> с регистрацией/авторизацией и правами доступа на основе ролей(ADMIN, USER, EDITOR). Админ может удалять/банить пользователей,
+                пользователи - управлять своим профилем и данными через UI и по REST интерфейсу с базовой авторизацией,
+                а редакторы - добавлять/удалять новости. Возможно оценивать новости лайк/дизлайк, можно писать комментарии под каждой новостью.
+                Проект покрыт unit-тестами
+                <br><br>
+                
+            </h5>
         </div>
     </div>
 </div>
