--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -125,3 +125,9 @@ div.card-container:hover .delete-news-btn {
 .delete-news-btn {
     opacity: 0;
 }
+
+.bi-envelope, .bi-github, .bi-telegram, .bi-linkedin {
+    margin-left: 5px;
+    margin-right: 5px;
+    cursor: pointer;
+}
