add liquibase migration

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -87,7 +87,7 @@
                 <br>
                 Spring Security, Spring Data JPA, Spring Security Test, Hibernate ORM, Hibernate Validator, SLF4J,
                 Thymeleaf,
-                Apache Tomcat, PostgreSQL, JUnit 5, AssertJ, jQuery, jQuery plugins, Bootstrap.
+                Apache Tomcat, PostgreSQL, JUnit 5, AssertJ, jQuery, jQuery plugins, Bootstrap, Liquibase.
                 <br><br>
                 <a href="https://github.com/N1decker/nbanews">Проект</a> с регистрацией/авторизацией и правами доступа
                 на основе ролей(ADMIN, USER, EDITOR). Админ может удалять/банить пользователей,
@@ -95,6 +95,17 @@
                 а редакторы - добавлять/удалять новости. Возможно оценивать новости - лайк/дизлайк, можно писать
                 комментарии под каждой новостью.
                 Проект покрыт unit-тестами
+                <br> <br>
+                В планах:
+                <ul>
+                    <li>добавить авто парсинг с сайтов через определенное время;</li>
+                    <li>показывать количество лайков;</li>
+                    <li>показывать аватары в комментариях;</li>
+                    <li>вести ветку обсуждений под каждым комментарием;</li>
+                    <li>добавить oAuth2;</li>
+                    <li>добавить капчу при регистрации;</li>
+                    <li>добавить редактирование новостей;</li>
+                </ul>
                 <br><br>
                 <div style="text-align: center">
                     <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
