--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<head th:include="/fragments/header :: header"></head>
+<head th:replace="fragments/header :: header"></head>
 <body>
-<div th:include="/fragments/navbar :: navbar"></div>
+<div th:replace="fragments/navbar :: navbar"></div>
 <div class="container" style="margin-top: 140px">
     <table id="users" class="horizontal-center table">
         <thead>
