--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
-<head th:include="/fragments/header :: header"></head>
+<head th:replace="fragments/header :: header"></head>
 <body>
 <div>
     <div class="navbar my-0">
