--- a/src/main/resources/templates/profileSettings.html
+++ b/src/main/resources/templates/profileSettings.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<head th:include="/fragments/header :: header"></head>
+<head th:replace="fragments/header :: header"></head>
 <body>
-<div th:include="/fragments/navbar :: navbar"></div>
+<div th:replace="fragments/navbar :: navbar"></div>
 
 <div class="container rounded" id="profileSettings">
     <div class="col">
