--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -11,7 +11,7 @@
             <th scope="col">Nickname</th>
             <th scope="col">Email</th>
             <th scope="col">Active</th>
-            <th scope="col">Roles</th>
+            <th scope="col">Roles <br> (read only)</th>
             <th scope="col"></th>
         </tr>
         </thead>
