--- a/src/main/resources/templates/fragments/addNews.html
+++ b/src/main/resources/templates/fragments/addNews.html
@@ -7,24 +7,34 @@
                         <div>
                             <textarea class="form-control mb-3" name="title" id="title" placeholder="Title"></textarea>
                         </div>
-                        <div class="custom-file mb-3">
-                            <label class="custom-file-label" for="image" id="image-label">Select image</label>
-                            <input type="file" name="image" class="custom-file-input" id="image"
-                                   onchange="getFileName('image')">
+                        <div class="mb-3">
+                            <input type="url" class="form-control" name="image" id="image" placeholder="Image url">
+                        </div>
+                        <!--                        <div class="custom-file mb-3">-->
+                        <!--                            <label class="custom-file-label" for="image" id="image-label">Select image</label>-->
+                        <!--                            <input type="file" name="image" class="custom-file-input" id="image"-->
+                        <!--                                   onchange="getFileName('image')">-->
+                        <!--                        </div>-->
+                        <div class="mb-3">
+                            <input type="url" class="form-control" name="sourceURL" id="sourceURL" placeholder="Source url">
                         </div>
                         <div class="mb-3">
-                            <input type="url" class="form-control" name="source" id="source" placeholder="Source url">
+                            <select name="sourceName" id="sourceName" class="form-select">
+                                <option selected>Choose the source</option>
+                                <option value="espn">ESPN</option>
+                                <option value="andscape">AndScape</option>
+                            </select>
                         </div>
-                        <div class="custom-file mb-3">
-                            <label class="custom-file-label" for="sourceLogo" id="sourceLogo-label">Select source
-                                logo</label>
-                            <input type="file" name="sourceLogo" class="custom-file-input" id="sourceLogo"
-                                   onchange="getFileName('sourceLogo')">
-<!--                            <select class="form-select" id="js-select2">-->
-<!--                                <option value="ESPN" selected>ESPN</option>-->
-<!--                                <option value="ANDSCAPE">ANDSCAPE</option>-->
-<!--                            </select>-->
-                        </div>
+<!--                        <div class="custom-file mb-3">-->
+<!--                            <label class="custom-file-label" for="sourceLogo" id="sourceLogo-label">Select source-->
+<!--                                logo</label>-->
+<!--                            <input type="file" name="sourceLogo" class="custom-file-input" id="sourceLogo"-->
+<!--                                   onchange="getFileName('sourceLogo')">-->
+<!--                            &lt;!&ndash;                            <select class="form-select" id="js-select2">&ndash;&gt;-->
+<!--                            &lt;!&ndash;                                <option value="ESPN" selected>ESPN</option>&ndash;&gt;-->
+<!--                            &lt;!&ndash;                                <option value="ANDSCAPE">ANDSCAPE</option>&ndash;&gt;-->
+<!--                            &lt;!&ndash;                            </select>&ndash;&gt;-->
+<!--                        </div>-->
                         <button type="submit" class="btn btn-primary">Submit</button>
                     </form>
                 </div>
