--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -98,13 +98,13 @@
                 <br> <br>
                 В планах:
                 <ul>
-                    <li>добавить авто парсинг с сайтов через определенное время;</li>
-                    <li>показывать количество лайков;</li>
-                    <li>показывать аватары в комментариях;</li>
-                    <li>вести ветку обсуждений под каждым комментарием;</li>
-                    <li>добавить oAuth2;</li>
-                    <li>добавить капчу при регистрации;</li>
-                    <li>добавить редактирование новостей;</li>
+                    <li>добавить авто парсинг с сайтов через определенное время ✓</li>
+                    <li>показывать количество лайков</li>
+                    <li>показывать аватары в комментариях</li>
+                    <li>вести ветку обсуждений под каждым комментарием</li>
+                    <li>добавить oAuth2</li>
+                    <li>добавить капчу при регистрации</li>
+                    <li>добавить редактирование новостей</li>
                 </ul>
                 <br><br>
                 <div style="text-align: center">
