added image entity for user avatar and refactored some code

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -94,13 +94,16 @@
                 пользователи - управлять своим профилем и данными через UI и по REST интерфейсу с базовой авторизацией,
                 а редакторы - добавлять/удалять новости. Возможно оценивать новости - лайк/дизлайк, можно писать
                 комментарии под каждой новостью.
-                Проект покрыт unit-тестами
+                Проект покрыт unit-тестами.
+
+                Довольно проработанное приложение во всех планах) Обработано большинство возможных ошибок. Приложение
+                само парсит новости через определенное время.
                 <br> <br>
                 В планах:
                 <ul>
                     <li>добавить авто парсинг с сайтов через определенное время ✓</li>
                     <li>показывать количество лайков</li>
-                    <li>показывать аватары в комментариях</li>
+                    <li>показывать аватары в комментариях ✓</li>
                     <li>вести ветку обсуждений под каждым комментарием</li>
                     <li>добавить oAuth2</li>
                     <li>добавить капчу при регистрации</li>
