--- a/src/main/resources/templates/profileSettings.html
+++ b/src/main/resources/templates/profileSettings.html
@@ -9,8 +9,8 @@
         <div class="row" style="justify-content: center">
             <div>
                 <div class="d-flex flex-column align-items-center text-center p-3 py-5">
-                    <img id="avatar" class="rounded-circle mt-5" width="150px" height="150px"
-                         th:src=" ${user.avatar} != null ? *{'data:image/jpeg;base64,'+ user.avatar} : '/images/icons/person-circle.svg'">
+                    <img id="avatar" class="rounded-circle mt-5" height="170px"
+                         th:src=" ${user.getImage} != null ? *{'data:image/jpeg;base64,'+ user.getImage.getAvatar()} : '/images/icons/person-circle.svg'">
                     <br>
                     <button class="btn btn-secondary" id="change-avatar-btn">Change avatar</button>
                 </div>
@@ -98,11 +98,13 @@
                         <div class="text-center split right modal-body">
                             <form>
                                 <div class="mb-3">
-                                    <label class="labels" th:text="${'This action cannot be undone. This will permanently delete your account. Please type '+user.email + '/' + user.nickname + ' to confirm'}"></label>
-                                    <input class="form-control" type="text"  id="delete-own-account-confirm-input" th:attr="user-email=${user.email}, user-nickname=${user.nickname}">
+                                    <label class="labels"
+                                           th:text="${'This action cannot be undone. This will permanently delete your account. Please type '+user.email + '/' + user.nickname + ' to confirm'}"></label>
+                                    <input class="form-control" type="text" id="delete-own-account-confirm-input"
+                                           th:attr="user-email=${user.email}, user-nickname=${user.nickname}">
                                 </div>
                             </form>
-                                <button class="btn btn-danger" id="final-delete-own-account-btn" disabled>Delete</button>
+                            <button class="btn btn-danger" id="final-delete-own-account-btn" disabled>Delete</button>
                         </div>
                     </div>
                 </div>
