--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -107,7 +107,8 @@
                     <li>вести ветку обсуждений под каждым комментарием</li>
                     <li>добавить oAuth2</li>
                     <li>добавить капчу при регистрации</li>
-                    <li>добавить редактирование новостей</li>
+                    <li>добавить редактирование новостей ✓</li>
+                    <li>поменять alert box на jquery alert dialog</li>
                 </ul>
                 <br><br>
                 <div style="text-align: center">
