--- a/src/main/resources/templates/news.html
+++ b/src/main/resources/templates/news.html
@@ -14,7 +14,7 @@
                     </div>
                     <div class="card-body">
                         <h5 class="card-title" th:text="${news1.title}"></h5>
-                        <h6 class="card-subtitle mb-2 text-muted" th:text="${news1.subhead}"></h6>
+                        <h6 class="card-subtitle mb-2 text-muted" th:text="${news1.getSubtitle}"></h6>
                         <div th:id="${news1.id}">
                             <!--В th:style проверяется, поставил ли юзер лайк. Если его нет в бд, приходит null и цвет лайков не меняется, если есть, приходит 1 или -1-->
                             <button class="btn like" type="button">
@@ -53,7 +53,7 @@
                                 </svg>
                             </a>
                         </div>
-                        <div class="editor-info row m-0">
+                        <div class="content-author-info row m-0">
                             <div class="col">
 
                             </div>
@@ -70,6 +70,15 @@
                                               d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"/>
                                     </svg>
                                 </button>
+                                <button class="update-news-btn btn btn-info" style="float: right; margin-right: 2px"
+                                        sec:authorize="hasRole('EDITOR')">
+<!--                                        data-bs-toggle="modal"-->
+<!--                                        data-bs-target=".update-news-modal">-->
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                         class="bi bi-pencil" viewBox="0 0 16 16">
+                                        <path d="M12.146.146a.5.5 0 0 1.708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z"/>
+                                    </svg>
+                                </button>
                             </div>
                         </div>
                     </div>
@@ -82,15 +91,16 @@
                             <input th:id="${'send-message' + news1.id}" type="text"
                                    class="form-control border-end-0 border rounded">
                             <span class="input-group-append">
-                            <button th:id="${news1.id}"
-                                    class="btn btn-outline-secondary bg-white  border rounded-pill ms-n5 send-msg-btn"
-                                    type="button" style="z-index: 0">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                     class="bi bi-send-fill" viewBox="0 0 16 16">
-                                    <path d="M15.964.686a.5.5 0 0 0-.65-.65L.767 5.855H.766l-.452.18a.5.5 0 0 0-.082.887l.41.26.001.002 4.995 3.178 3.178 4.995.002.002.26.41a.5.5 0 0 0 .886-.083l6-15Zm-1.833 1.89L6.637 10.07l-.215-.338a.5.5 0 0 0-.154-.154l-.338-.215 7.494-7.494 1.178-.471-.47 1.178Z"/>
-                                </svg>
-                            </button>
-                        </span>
+                                                                <button th:id="${news1.id}"
+                                                                        class="btn btn-outline-secondary bg-white  border rounded-pill ms-n5 send-msg-btn"
+                                                                        type="button" style="z-index: 0">
+                                                                    <svg xmlns="http://www.w3.org/2000/svg" width="16"
+                                                                         height="16" fill="currentColor"
+                                                                         class="bi bi-send-fill" viewBox="0 0 16 16">
+                                                                        <path d="M15.964.686a.5.5 0 0 0-.65-.65L.767 5.855H.766l-.452.18a.5.5 0 0 0-.082.887l.41.26.001.002 4.995 3.178 3.178 4.995.002.002.26.41a.5.5 0 0 0 .886-.083l6-15Zm-1.833 1.89L6.637 10.07l-.215-.338a.5.5 0 0 0-.154-.154l-.338-.215 7.494-7.494 1.178-.471-.47 1.178Z"/>
+                                                                    </svg>
+                                                                </button>
+                                                            </span>
                         </div>
                     </div>
                 </div>
@@ -118,20 +128,21 @@
                     <!--                            </span>-->
                     <!--                        </div>-->
                     <!--                    </div>-->
-                    <div sec:authorize="hasRole('EDITOR')">
-                        <button type="button" class="btn" style="background: #5ce1e6" id="addNewsBtn"
-                                data-bs-toggle="modal"
-                                data-bs-target="#addNews"
-                                aria-expanded="false" aria-controls="collapseAddNews">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="70" height="16" fill="currentColor"
-                                 class="bi bi-plus"
-                                 viewBox="0 0 16 16">
-                                <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"></path>
-                            </svg>
-                        </button>
-                    </div>
+                    <!--                    <div sec:authorize="hasRole('EDITOR')">-->
+                    <!--                        <button type="button" class="btn" style="background: #5ce1e6" id="addNewsBtn"-->
+                    <!--                                data-bs-toggle="modal"-->
+                    <!--                                data-bs-target="#addNews"-->
+                    <!--                                aria-expanded="false" aria-controls="collapseAddNews">-->
+                    <!--                            <svg xmlns="http://www.w3.org/2000/svg" width="70" height="16" fill="currentColor"-->
+                    <!--                                 class="bi bi-plus"-->
+                    <!--                                 viewBox="0 0 16 16">-->
+                    <!--                                <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"></path>-->
+                    <!--                            </svg>-->
+                    <!--                        </button>-->
+                    <!--                    </div>-->
                 </div>
                 <div th:replace="fragments/addNews :: addNews"></div>
+                <div th:replace="fragments/updateNews :: updateNews"></div>
             </div>
         </div>
     </aside>
