--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -1,6 +1,6 @@
 <div th:fragment="navbar" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
     <nav class="navbar">
-        <a href="/" class="navbar-brand">
+        <a href="/news" class="navbar-brand">
             <img src="/images/logo.png" height="60" alt="NbaNews">
         </a>
         <ul class="nav justify-content-end">
